Fix #928 - Revise summary dashboard stats to stretch according to the tallest item (#1086)

--- a/static/scss/pages/dashboard.scss
+++ b/static/scss/pages/dashboard.scss
@@ -43,6 +43,9 @@
     padding: 0 $spacing-xs;
     border-right: 1px solid #ECECEC;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
     span {
         display: block;
